Lots of minors tweaks, search fixes.
* Fixed #4 - autolinking should work better now.
* Fixed #3 - horizontal scrollbar showing up in the thread list when it
shouldn't.
* Search now takes site root into account for linking to content.
* Widened search result box and limited displayed results to 5.
* Removed search method from SignalR hub as the method in
CommentController was the only one being used.
* Moved "urls" setting from hosting.json to appsettings.json and removed
hosting.json.
* Add example.appsettings.json for the basic app settings and updated
the environment specific example.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -18,12 +18,16 @@ body {
 #mainContent,
 #threadList,
 #thread {
-    padding-top: 53px !important;
+    margin-top: 53px !important;
 }
 
 .divider-column {
     position: relative !important;
     padding: 0 !important;
+}
+
+#searchResults {
+    width: 800px;
 }
 
 .grid {
